--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
   },
   "homepage": "https://github.com/bottega-code-school/js-builder",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "@ksyos/react-dropzone-component": "^3.2.1",
     "ajv": "^5.5.2",
     "autoprefixer": "^9.1.0",
     "axios": "^0.19.0",
